fix(build): #2188.2 add missing tag
Former-commit-id: 8b24c66ad0d930b5bd33eff9fe279e0565bc0b33

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -131,6 +131,7 @@ deploy_mobile_ota:
 deploy_mobile_ota_stop:
   <<: *in_dev_branch
   stage: pre-build
+  tags: [autoscaling]
   when: manual
   script: [""]
   environment:
