feat(cross): #2140.28 add c three dependency
Former-commit-id: f365c8efaf0e9e23ee90e4129c9e84c86cfcdbb1

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ shared-local-instance.db
 Gemfile.lock
 vendor
 app/assets/admin/
+app/assets/external/
 app/assets/node_modules
 app/assets/package-lock.json
 deploy/.terraform
