feat(cross): #2140.29 c three based pie chart
Former-commit-id: 50c4d6b35033314b513d327fe1bafb0c4460f702

--- a/app/assets/graphics/.eslintrc
+++ b/app/assets/graphics/.eslintrc
@@ -6,8 +6,10 @@
   ],
   "rules": {
     // Camel case
-    "filenames/match-regex": [2, "^[a-z]+([A-Z][a-z]+)*$", true],
+    "filenames/match-regex": [2, "^[a-z]+([a-zA-Z0-9]+)*$", true],
     // Many D3 properties like force generators are 'fx', or 'fy'
-    "id-length": "off"
+    "id-length": "off",
+    // Many C3 arguments use 'data', which is black-listed
+    "id-blacklist": "warn"
   }
 }
