feat(front): #2140.30 color palette
Former-commit-id: 76a806e00cadbd202c534f14d91b3c1223809821

--- a/app/assets/graphics/.eslintrc
+++ b/app/assets/graphics/.eslintrc
@@ -4,6 +4,9 @@
     "strict/browser",
     "strict/d3"
   ],
+  "parserOptions": {
+    "ecmaVersion": 2018
+  },
   "rules": {
     // Camel case
     "filenames/match-regex": [2, "^[a-z]+([a-zA-Z0-9]+)*$", true],
