refac(front): #1719.6 graphics and button linted
Former-commit-id: 331d4c2f4a010df13fd6d7fa3259be3f906760b2

--- a/front/.eslintignore
+++ b/front/.eslintignore
@@ -1,9 +1,16 @@
 # List of ignored files/dirs by the new linter
 
-graphics/
-resources/
-scenes/
-styles/
-typings/
-utils/
-components/
+src/resources/
+src/scenes/
+src/styles/
+src/typings/
+src/utils/
+src/**/*.css.d.ts
+src/components/ConfirmDialog
+src/components/DataTableNext
+src/components/FluidIcon
+src/components/Modal
+src/components/Notification
+src/components/Preloader
+src/components/ScrollUpButton
+src/components/TooltipWrapper
