feat(build): #2140.31 deploy on master
- This avoids Charts downtime due to unsynchronized schemas


Former-commit-id: 63005d870c73074f17af60c13e0997fb28f504af

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -113,6 +113,10 @@ analytics_dev_all:
 
 analytics_prod_all:
   <<: *analytics_template
+  <<: *in_master_branch
+
+analytics_prod_all_schedule:
+  <<: *analytics_template
   interruptible: false
   only:
     refs: [schedules]
