feat(back): #470.1 http redirs code
- Change ingress http to https
redirections code from 308 to 301


Former-commit-id: 99f2d925edbb97f5f8f44709f5f91775c643a593

--- a/infrastructure/eks/manifests/helm/nginx.yaml
+++ b/infrastructure/eks/manifests/helm/nginx.yaml
@@ -9,6 +9,7 @@ controller:
     server-tokens: "false"
     use-gzip: "false"
     ssl-protocols: "TLSv1.2 TLSv1.3"
+    http-redirect-code: "301"
   kind: DaemonSet
   extraArgs:
     default-ssl-certificate: serves/fluidattacks-cert
