--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -12,11 +12,19 @@
     },
     "project": "./tsconfig.json"
   },
-  "plugins": ["@typescript-eslint", "react", "react-hooks", "fp", "prettier"],
+  "plugins": [
+    "@typescript-eslint",
+    "react",
+    "react-hooks",
+    "fp",
+    "prettier",
+    "jest"
+  ],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/all",
     "plugin:react/all",
+    "plugin:jest/all",
     "plugin:fp/recommended",
     "plugin:prettier/recommended",
     "prettier/@typescript-eslint",
@@ -79,6 +87,12 @@
      */
     "fp/no-unused-expression": "off",
     "fp/no-nil": "off",
+    "jest/lowercase-name": [
+      "error",
+      {
+        "ignoreTopLevelDescribe": true
+      }
+    ],
     "react/jsx-filename-extension": [
       "error",
       {
