refac(front): #2195 upgrade to expo sdk38
Former-commit-id: fae8aa5e91bba8a9fa5eb09ccd6058654a8f3272

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -16,6 +16,9 @@
       "**/*"
     ],
     "description": "At Integrates a project’s stakeholders (developers, technicians, management, etc.) can interface with Fluid Attacks hackers. Through Integrates, Fluid Attacks communicates all identified security risks to a client’s systems for prompt, efficient and effective remediation by the client company. It also provides the client company’s decision-makers with real time information regarding their systems’ security and Fluid Attacks project progress.",
+    "experiments": {
+      "redesignedLogBox": true
+    },
     "icon": "./assets/icon.png",
     "ios": {
       "bundleIdentifier": "com.fluidattacks.integrates",
@@ -36,7 +39,7 @@
     ],
     "primaryColor": "#272727",
     "privacy": "public",
-    "sdkVersion": "37.0.0",
+    "sdkVersion": "38.0.0",
     "slug": "integrates",
     "splash": {
       "image": "./assets/splash.png",
