--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,7 +15,7 @@
   "homepage": "https://fluidattacks.com/integrates",
   "dependencies": {
     "@apollo/react-hooks": "3.1.5",
-    "@types/react-native": "0.61.23",
+    "@types/react-native": "0.62.13",
     "@types/react-router-native": "5.1.0",
     "apollo-cache-inmemory": "1.6.6",
     "apollo-client": "2.6.10",
@@ -24,27 +24,25 @@
     "apollo-link-error": "1.1.13",
     "apollo-link-http": "1.5.17",
     "babel-plugin-inline-import": "3.0.0",
-    "expo": "37.0.12",
-    "expo-app-auth": "9.0.0",
-    "expo-constants": "9.0.0",
-    "expo-device": "2.1.0",
+    "expo": "38.0.3",
+    "expo-app-auth": "9.1.1",
+    "expo-constants": "9.1.1",
+    "expo-device": "2.2.1",
     "expo-google-app-auth": "8.1.2",
-    "expo-local-authentication": "9.0.0",
-    "expo-localization": "8.1.0",
-    "expo-secure-store": "8.1.0",
+    "expo-local-authentication": "9.1.1",
+    "expo-localization": "8.2.1",
+    "expo-secure-store": "9.0.1",
     "expo-updates": "0.2.10",
     "graphql": "14.6.0",
     "graphql-tag": "2.10.3",
     "i18next": "19.5.1",
     "intl": "1.2.5",
     "lodash": "4.17.15",
-    "react": "16.9.0",
+    "react": "16.11.0",
     "react-i18next": "11.7.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-appearance": "0.3.4",
-    "react-native-gesture-handler": "1.6.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-paper": "3.10.1",
-    "react-native-svg": "11.0.1",
+    "react-native-svg": "12.1.0",
     "react-router-native": "5.2.0",
     "rollbar": "2.17.0"
   },
@@ -52,26 +50,26 @@
     "@apollo/react-testing": "3.1.4",
     "@types/enzyme": "3.10.5",
     "@types/enzyme-adapter-react-16": "1.0.6",
-    "@types/jest": "25.2.3",
+    "@types/jest": "26.0.3",
     "@types/react-dom": "16.9.8",
     "babel-preset-expo": "8.2.3",
     "bunyan": "1.8.13",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
-    "expo-cli": "3.21.10",
-    "fetch-mock": "9.10.2",
-    "jest": "25.5.4",
-    "jest-expo": "37.0.0",
-    "react-dom": "16.9.0",
-    "ts-jest": "25.5.1",
+    "expo-cli": "3.21.12",
+    "fetch-mock": "9.10.3",
+    "jest": "26.1.0",
+    "jest-expo": "38.0.0",
+    "react-dom": "16.11.0",
+    "ts-jest": "26.1.1",
     "tslint": "6.1.2",
     "tslint-react": "5.0.0",
-    "turtle-cli": "0.15.1",
+    "turtle-cli": "0.16.0",
     "typescript": "3.9.5"
   },
   "scripts": {
     "lint": "tsc -p tsconfig.json && tslint -p tsconfig.json -t codeFrame",
     "start": "expo start",
-    "test": "jest"
+    "test": "node_modules/jest/bin/jest.js"
   }
 }
