refac(build): #2195.2 improve android build
- use android sdk 29
- move ota jobs to deploy stage as they
- are no longer needed before building the apk


Former-commit-id: 384cd43e89011a02edcdfbda2a010e0a074f74ca

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -29,7 +29,7 @@
     },
     "name": "Integrates",
     "notification": {
-      "color": "#FE3435",
+      "color": "#fe3435",
       "icon": "./assets/notification.png"
     },
     "orientation": "portrait",
