--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -122,26 +122,6 @@ analytics_prod_all_schedule:
     refs: [schedules]
     variables: [$analytics]
 
-deploy_mobile_ota:
-  <<: *with_nix
-  <<: *in_everywhere_except_periodic_jobs
-  stage: pre-build
-  tags: [autoscaling-large]
-  environment:
-    name: "mobile/$CI_COMMIT_REF_NAME"
-    url: "https://expo.io/@developmentatfluid/integrates?release-channel=$CI_COMMIT_REF_NAME"
-    on_stop: deploy_mobile_ota_stop
-
-deploy_mobile_ota_stop:
-  <<: *in_dev_branch
-  stage: pre-build
-  tags: [autoscaling]
-  when: manual
-  script: [""]
-  environment:
-    name: "mobile/$CI_COMMIT_REF_NAME"
-    action: stop
-
 build_front:
   <<: *with_nix
   <<: *in_everywhere_except_periodic_jobs
@@ -157,7 +137,6 @@ build_mobile_android:
   <<: *with_nix
   <<: *in_master_branch
   stage: build
-  needs: [deploy_mobile_ota]
   tags: [autoscaling-large]
   artifacts:
     expire_in: 1 day
@@ -228,6 +207,26 @@ deploy_k8s_stop_ephemeral:
   when: manual
   environment:
     name: "review/$CI_COMMIT_REF_SLUG"
+    action: stop
+
+deploy_mobile_ota:
+  <<: *with_nix
+  <<: *in_everywhere_except_periodic_jobs
+  stage: deploy-app
+  tags: [autoscaling-large]
+  environment:
+    name: "mobile/$CI_COMMIT_REF_NAME"
+    url: "https://expo.io/@developmentatfluid/integrates?release-channel=$CI_COMMIT_REF_NAME"
+    on_stop: deploy_mobile_ota_stop
+
+deploy_mobile_ota_stop:
+  <<: *in_dev_branch
+  stage: deploy-app
+  tags: [autoscaling]
+  when: manual
+  script: [""]
+  environment:
+    name: "mobile/$CI_COMMIT_REF_NAME"
     action: stop
 
 deploy_mobile_playstore:
