feat(cross): #2140.38 isolate environments
Former-commit-id: 692a54616b4c06968a49d8c90dfc9c59aa240225

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
+analytics/**/*.jpg
 analytics/**/*.json
+analytics/**/*.html
+analytics/**/*.png
 app/documentator/results/*.pdf
 app/documentator/tpls/*.tpl
 app/documentator/images/*.png
