--- a/front/package.json
+++ b/front/package.json
@@ -62,6 +62,7 @@
     "jquery-comments_brainkit": "1.2.8",
     "jsdom": "16.2.2",
     "lodash": "4.17.15",
+    "logrocket": "1.0.9",
     "mixpanel-browser": "2.36.0",
     "moment": "2.26.0",
     "react": "16.13.1",
@@ -96,7 +97,7 @@
     "redux": "4.0.5",
     "redux-form": "8.3.2",
     "revalidate": "1.2.0",
-    "rollbar": "2.16.2",
+    "rollbar": "2.17.0",
     "subscriptions-transport-ws": "0.9.16",
     "topojson-client": "3.1.0",
     "yargs": "15.3.1"
