feat(back): #2140.42 harden script
- Handle some errors
- Make the master job non-interruptible
- Refac a little the code to show current progress in the job log


Former-commit-id: 6fe585d0d6b116a1860b4149a5c7aab3a262fefd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -114,6 +114,7 @@ analytics_dev_all:
 analytics_prod_all:
   <<: *analytics_template
   <<: *in_master_branch
+  interruptible: false
 
 analytics_prod_all_schedule:
   <<: *analytics_template
