feat(back): #941.16 cfn rds iam auth not enabled
Former-commit-id: d23b298e6a054eba39b6d0e9289a984bc25d1a77

--- a/test/static/cloudformation/safe/template.yaml
+++ b/test/static/cloudformation/safe/template.yaml
@@ -24,6 +24,7 @@ Resources:
       DBSubnetGroupName:
         Ref: DbSubnetGroup
       DeletionProtection: 'true'
+      EnableIAMDatabaseAuthentication: 'true'
       Engine: postgres
       StorageEncrypted: 'true'
     Type: AWS::RDS::DBCluster
@@ -135,6 +136,7 @@ Resources:
       DBSubnetGroupName:
         Ref: DbSubnetGroup
       DeletionProtection: 'true'
+      EnableIAMDatabaseAuthentication: 'true'
       Engine: postgres
       MasterUserPassword: pass
       MasterUsername: user
