--- a/infrastructure/eks/manifests/ingress/main-domains.yaml
+++ b/infrastructure/eks/manifests/ingress/main-domains.yaml
@@ -11,6 +11,7 @@ metadata:
     nginx.ingress.kubernetes.io/configuration-snippet: |
       set $CSP '';
       set $CSP "${CSP} script-src 'self' 'unsafe-inline' 'unsafe-eval'";
+      set $CSP "${CSP} worker-src 'blob:'";
       set $CSP '${CSP} *.cloudflare.com';    # Integrates libraries
       set $CSP '${CSP} *.amazonaws.com';     # CDN
       set $CSP '${CSP} *.cloudfront.net';    # RDS Station
