refac(front): #1719.11 increase linter coverage
- Lint Notification from components
- Lint Preloader from components
- Lint ScrollUpButton from components


Former-commit-id: 57594b467d14c48f6ee8c57b5188d73629534304

--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -53,6 +53,10 @@
         "usePrettierrc": true
       }
     ],
+    "@typescript-eslint/ban-ts-comment": [
+      "error",
+      { "ts-expect-error": "allow-with-description" }
+    ],
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       {
