--- a/infrastructure/eks/manifests/ingress/main-domains.yaml
+++ b/infrastructure/eks/manifests/ingress/main-domains.yaml
@@ -11,7 +11,6 @@ metadata:
     nginx.ingress.kubernetes.io/configuration-snippet: |
       set $CSP '';
       set $CSP "${CSP} script-src 'self' 'unsafe-inline' 'unsafe-eval'";
-      set $CSP "${CSP} worker-src 'blob:'";
       set $CSP '${CSP} *.cloudflare.com';    # Integrates libraries
       set $CSP '${CSP} *.amazonaws.com';     # CDN
       set $CSP '${CSP} *.cloudfront.net';    # RDS Station
@@ -26,9 +25,10 @@ metadata:
       set $CSP '${CSP} *.d2yyd1h5u9mauk.cloudfront.net';	            # Delighted
       set $CSP '${CSP} *.zdassets.com';	        # Zendesk Widget
       set $CSP '${CSP} *.cookiebot.com';        # Cookie consent
-      set $CSP '${CSP} *.lr-ingest.io';	        # LogRocket
+      set $CSP '${CSP} *.lr-ingest.io';	        # LogRocket cdn
+      set $CSP '${CSP}; worker-src blob:';      # LogRocket workers
 
-      more_set_headers "Content-Security-Policy: ${CSP};";
+      more_set_headers "Content-Security-Policy: ${CSP}";
       more_set_headers "Expires: 0";
       more_set_headers "Pragma: no-cache";
       more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains" always;
