refac(front): #2009.5 update front deps
- audit moderate vulns and higher
- while they fix lodash


Former-commit-id: e7b80ce6aa3ddcda0ff0348ebeb3d4faff978484

--- a/front/package.json
+++ b/front/package.json
@@ -15,26 +15,26 @@
     "@apollo/react-common": "3.1.4",
     "@apollo/react-components": "3.1.5",
     "@apollo/react-hooks": "3.1.5",
-    "@casl/ability": "4.1.2",
-    "@casl/react": "2.1.0",
-    "@nivo/axes": "0.61.0",
-    "@nivo/legends": "0.61.1",
-    "@nivo/line": "0.61.1",
+    "@casl/ability": "4.1.5",
+    "@casl/react": "2.1.1",
+    "@nivo/axes": "0.62.0",
+    "@nivo/legends": "0.62.0",
+    "@nivo/line": "0.62.0",
     "@rehooks/component-size": "1.0.3",
     "@types/apollo-upload-client": "8.1.3",
-    "@types/chart.js": "2.9.21",
-    "@types/jquery": "3.3.38",
+    "@types/chart.js": "2.9.22",
+    "@types/jquery": "3.5.0",
     "@types/jsdom": "16.2.3",
-    "@types/lodash": "4.14.153",
-    "@types/mixpanel-browser": "2.35.2",
-    "@types/react": "16.9.35",
+    "@types/lodash": "4.14.157",
+    "@types/mixpanel-browser": "2.35.3",
+    "@types/react": "16.9.41",
     "@types/react-bootstrap": "0.32.21",
     "@types/react-burger-menu": "2.6.1",
     "@types/react-dom": "16.9.8",
     "@types/react-fontawesome": "1.6.4",
     "@types/react-notification-system": "0.2.39",
     "@types/react-redux": "7.1.7",
-    "@types/react-router": "5.1.7",
+    "@types/react-router": "5.1.8",
     "@types/react-router-dom": "5.1.5",
     "@types/react-syntax-highlighter": "11.0.4",
     "@types/react-tag-input": "6.1.2",
@@ -57,22 +57,22 @@
     "font-awesome": "4.7.0",
     "graphql": "14.6.0",
     "graphql-tag": "2.10.3",
-    "i18next": "19.4.5",
+    "i18next": "19.5.2",
     "jquery": "3.5.1",
     "jquery-comments_brainkit": "1.2.8",
     "jsdom": "16.2.2",
     "lodash": "4.17.15",
     "logrocket": "1.0.9",
-    "mixpanel-browser": "2.36.0",
-    "moment": "2.26.0",
+    "mixpanel-browser": "2.38.0",
+    "moment": "2.27.0",
     "react": "16.13.1",
-    "react-apollo-network-status": "4.0.0",
+    "react-apollo-network-status": "4.0.1",
     "react-bootstrap": "0.33.1",
-    "react-bootstrap-table-next": "4.0.2",
+    "react-bootstrap-table-next": "4.0.3",
     "react-bootstrap-table2-filter": "1.3.3",
     "react-bootstrap-table2-paginator": "2.1.2",
     "react-bootstrap-table2-toolkit": "2.1.3",
-    "react-burger-menu": "2.6.13",
+    "react-burger-menu": "2.6.17",
     "react-chartjs-2": "2.9.0",
     "react-circular-progressbar": "2.0.3",
     "react-datetime": "2.16.3",
@@ -80,20 +80,20 @@
     "react-dnd-html5-backend": "3.0.2",
     "react-dom": "16.13.1",
     "react-fontawesome": "1.7.1",
-    "react-i18next": "11.5.0",
+    "react-i18next": "11.7.0",
     "react-image-lightbox": "5.1.1",
     "react-media": "1.9.2",
     "react-notification-system": "0.4.0",
-    "react-phone-input-2": "2.13.5",
+    "react-phone-input-2": "2.13.7",
     "react-redux": "7.2.0",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scroll-up": "1.3.3",
-    "react-svg": "11.0.23",
+    "react-svg": "11.0.28",
     "react-syntax-highlighter": "12.2.1",
     "react-tag-input": "6.4.3",
     "react-textarea-autosize": "7.0.4",
-    "react-toastify": "6.0.5",
+    "react-toastify": "6.0.6",
     "redux": "4.0.5",
     "redux-form": "8.3.2",
     "revalidate": "1.2.0",
@@ -106,50 +106,50 @@
     "@apollo/react-testing": "3.1.4",
     "@types/enzyme": "3.10.5",
     "@types/enzyme-adapter-react-16": "1.0.6",
-    "@types/jest": "25.2.3",
+    "@types/jest": "26.0.3",
     "@types/mini-css-extract-plugin": "0.9.1",
     "@types/optimize-css-assets-webpack-plugin": "5.0.1",
-    "@types/terser-webpack-plugin": "2.2.0",
-    "@types/webpack": "4.41.13",
+    "@types/terser-webpack-plugin": "3.0.0",
+    "@types/webpack": "4.41.18",
     "@types/webpack-dev-server": "3.11.0",
-    "@typescript-eslint/eslint-plugin": "3.3.0",
-    "@typescript-eslint/parser": "3.3.0",
-    "css-loader": "3.5.3",
+    "@typescript-eslint/eslint-plugin": "3.5.0",
+    "@typescript-eslint/parser": "3.5.0",
+    "css-loader": "3.6.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
-    "eslint": "7.2.0",
+    "eslint": "7.3.1",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-fp": "2.3.0",
     "eslint-plugin-jest": "23.17.1",
     "eslint-plugin-prettier": "3.1.4",
-    "eslint-plugin-react": "7.20.0",
-    "eslint-plugin-react-hooks": "4.0.4",
-    "fetch-mock": "9.10.1",
+    "eslint-plugin-react": "7.20.3",
+    "eslint-plugin-react-hooks": "4.0.5",
+    "fetch-mock": "9.10.3",
     "file-loader": "6.0.0",
     "identity-obj-proxy": "3.0.0",
-    "jest": "26.0.1",
+    "jest": "26.1.0",
     "jest-canvas-mock": "2.2.0",
     "mini-css-extract-plugin": "0.9.0",
     "mockdate": "3.0.2",
     "open": "7.0.4",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "prettier": "2.0.5",
-    "terser-webpack-plugin": "3.0.2",
-    "ts-jest": "26.0.0",
+    "terser-webpack-plugin": "3.0.6",
+    "ts-jest": "26.1.1",
     "ts-loader": "7.0.5",
-    "ts-node": "8.10.1",
+    "ts-node": "8.10.2",
     "tslint": "6.1.2",
     "tslint-react": "5.0.0",
     "typed-css-modules": "0.6.4",
-    "typescript": "3.9.5",
+    "typescript": "3.9.6",
     "waait": "1.0.5",
     "wait-for-expect": "3.0.2",
     "webpack": "4.43.0",
-    "webpack-cli": "3.3.11",
+    "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0"
   },
   "scripts": {
-    "audit": "npm set audit-level high && npm config set audit-level high && npm audit",
+    "audit": "npm audit --audit-level=moderate",
     "build": "npm run css && webpack --config webpack.prod.config.ts",
     "css": "tcm src/ --silent",
     "lint:tslint": "npm run css && tsc -p tsconfig.json && tslint -p tsconfig.json -t codeFrame",
