feat(back): #1375 huge reports refactor
- This refac gets all documentation-related files
and move them to backend/reports
- app/documentator and app/techdoc are deleted
- Its content is organized into backend/reports,
preserving same templates, resources etc folders
- Templates are divided between pdf and excel ones
- All related paths, imports, refs updated to
this new folder structure
- Reports are working the same, this is just a
change in the folder structure
- gitignore modified with new paths


Former-commit-id: 2f66a7e6b8e4774ed4a09b9fcbb4979df8a27ff5

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@ analytics/**/*.jpg
 analytics/**/*.json
 analytics/**/*.html
 analytics/**/*.png
-app/documentator/results/*.pdf
-app/documentator/tpls/*.tpl
-app/documentator/images/*.png
+django-apps/integrates-back-async/backend/reports/results_pdf/*.pdf
+django-apps/integrates-back-async/backend/reports/results_pdf/*.xlsx
+django-apps/integrates-back-async/backend/reports/tpls/*.tpl
+django-apps/integrates-back-async/backend/reports/images/*.png
 app/autodoc/results/*.xlsx
 app/autodoc/results/*.pptx
 app/techdoc/results/*.xlsx
