--- a/front/package.json
+++ b/front/package.json
@@ -41,6 +41,7 @@
     "@types/react-textarea-autosize": "4.3.5",
     "@types/redux-form": "8.2.3",
     "@types/revalidate": "1.1.2",
+    "@types/sjcl": "1.0.29",
     "@types/topojson-client": "3.0.0",
     "@types/yargs": "15.0.5",
     "apollo-cache-inmemory": "1.6.6",
@@ -98,6 +99,7 @@
     "redux-form": "8.3.2",
     "revalidate": "1.2.0",
     "rollbar": "2.17.0",
+    "sjcl": "1.0.8",
     "subscriptions-transport-ws": "0.9.16",
     "topojson-client": "3.1.0",
     "yargs": "15.3.1"
