--- a/front/.eslintignore
+++ b/front/.eslintignore
@@ -6,4 +6,6 @@ src/styles/
 src/typings/
 src/utils/
 src/**/*.css.d.ts
-src/components/DataTableNext
+src/components/DataTableNext/index.tsx
+src/components/DataTableNext/index.spec.tsx
+src/components/DataTableNext/types.ts
