--- a/services/autoscaling-ci/config.toml
+++ b/services/autoscaling-ci/config.toml
@@ -40,6 +40,8 @@ check_interval = 20
     MachineDriver = "amazonec2"
     MachineName = "autoscaling-ci-%s"
     MachineOptions = [
+      "amazonec2-request-spot-instance=true",
+      "amazonec2-spot-price=",
       "amazonec2-access-key=__autoscaling_access_key__",
       "amazonec2-secret-key=__autoscaling_secret_key__",
       "amazonec2-region=us-east-1",
@@ -51,7 +53,7 @@ check_interval = 20
       "amazonec2-use-ebs-optimized-instance=true",
       "amazonec2-security-group=AutoscalingCISG",
       "amazonec2-ami=ami-075b5fce6712726ed",
-      "amazonec2-instance-type=t3a.medium",
+      "amazonec2-instance-type=m5a.large",
       "amazonec2-volume-type=gp2",
       "amazonec2-root-size=70"
     ]
@@ -99,6 +101,8 @@ check_interval = 20
     MachineDriver = "amazonec2"
     MachineName = "autoscaling-large-ci-%s"
     MachineOptions = [
+      "amazonec2-request-spot-instance=true",
+      "amazonec2-spot-price=",
       "amazonec2-access-key=__autoscaling_access_key__",
       "amazonec2-secret-key=__autoscaling_secret_key__",
       "amazonec2-region=us-east-1",
@@ -110,7 +114,7 @@ check_interval = 20
       "amazonec2-use-ebs-optimized-instance=true",
       "amazonec2-security-group=AutoscalingCISG",
       "amazonec2-ami=ami-075b5fce6712726ed",
-      "amazonec2-instance-type=t3a.large",
+      "amazonec2-instance-type=m5a.large",
       "amazonec2-volume-type=gp2",
       "amazonec2-root-size=70"
     ]
@@ -159,6 +163,8 @@ check_interval = 20
     MachineDriver = "amazonec2"
     MachineName = "autonomic-ci-%s"
     MachineOptions = [
+      "amazonec2-request-spot-instance=true",
+      "amazonec2-spot-price=",
       "amazonec2-access-key=__autoscaling_access_key__",
       "amazonec2-secret-key=__autoscaling_secret_key__",
       "amazonec2-region=us-east-1",
@@ -170,7 +176,7 @@ check_interval = 20
       "amazonec2-use-ebs-optimized-instance=true",
       "amazonec2-security-group=AutoscalingCISG",
       "amazonec2-ami=ami-075b5fce6712726ed",
-      "amazonec2-instance-type=t3a.medium",
+      "amazonec2-instance-type=m5a.large",
       "amazonec2-volume-type=gp2",
       "amazonec2-root-size=70"
     ]
