fix(build): #2224.2 simulate cloudfront flush
- The integrates/asserts key is already in cloudfront under a contract
  of 86400 seconds
- Since I don't want to wait that long, let's force a flush by
  creating a new key :(


Former-commit-id: 83092bf4fa7155c244f2a6ac53f82f688d81d090

--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,10 @@ shared-local-instance.db
 .bundle
 Gemfile.lock
 vendor
-app/assets/admin/
-app/assets/external/
-app/assets/node_modules
-app/assets/package-lock.json
+app/static/admin/
+app/static/external/
+app/static/node_modules
+app/static/package-lock.json
 deploy/.terraform
 deploy/terraform.tfstate
 *.envrc
@@ -37,8 +37,8 @@ front/src/**/*.js
 front/src/**/*.jsx
 front/src/**/*.css.d.ts
 front/package-lock.json
-app/assets/login/*.js
-app/assets/dashboard/*
+app/static/login/*.js
+app/static/dashboard/*
 env-dev.vars
 local-test.sh
 local-linting.sh
