--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -18,13 +18,15 @@
     "react-hooks",
     "fp",
     "prettier",
-    "jest"
+    "jest",
+    "jest-formatting"
   ],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/all",
     "plugin:react/all",
     "plugin:jest/all",
+    "plugin:jest-formatting/strict",
     "plugin:fp/recommended",
     "plugin:prettier/recommended",
     "prettier/@typescript-eslint",
@@ -36,6 +38,7 @@
     "multiline-comment-style": ["error", "starred-block"],
     "no-console": "error",
     "no-duplicate-imports": "error",
+    "no-shadow": "error",
     "no-useless-rename": "error",
     "one-var": ["error", "never"],
     "padding-line-between-statements": [
