--- a/services/autoscaling-ci/config.toml
+++ b/services/autoscaling-ci/config.toml
@@ -53,7 +53,7 @@ check_interval = 20
       "amazonec2-use-ebs-optimized-instance=true",
       "amazonec2-security-group=AutoscalingCISG",
       "amazonec2-ami=ami-075b5fce6712726ed",
-      "amazonec2-instance-type=m5a.large",
+      "amazonec2-instance-type=t2.medium",
       "amazonec2-volume-type=gp2",
       "amazonec2-root-size=70"
     ]
@@ -176,7 +176,7 @@ check_interval = 20
       "amazonec2-use-ebs-optimized-instance=true",
       "amazonec2-security-group=AutoscalingCISG",
       "amazonec2-ami=ami-075b5fce6712726ed",
-      "amazonec2-instance-type=m5a.large",
+      "amazonec2-instance-type=t2.medium",
       "amazonec2-volume-type=gp2",
       "amazonec2-root-size=70"
     ]
