feat(build): #411.2 autoscaling ci
- Add test job and provisioner
- Add apply job and provisioner
- Other minor changes


Former-commit-id: 948186eeb6d31893235fb3b20824a6c7de68eaaa

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -193,16 +193,6 @@ infra_analytics_deploy:
   <<: *in_master_branch
   stage: deploy
 
-infra_autoscaling_ci_test:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: build-and-test
-
-infra_autoscaling_ci_deploy:
-  <<: *with_nix
-  <<: *in_master_branch
-  stage: deploy
-
 infra_autoscaling_ci_deploy_config:
   <<: *with_nix
   <<: *in_master_branch
@@ -455,3 +445,23 @@ fluidasserts_post:
     - master
   except:
     - schedules
+
+# Build 2
+
+.with_nix_2: &with_nix_2
+  tags: [autoscaling]
+  image: "${CI_REGISTRY_IMAGE}/nix:${CI_JOB_NAME}"
+  needs: []
+  script:
+    - ./build2.sh "${CI_JOB_NAME% *}"
+  interruptible: true
+
+test_autoscaling_ci:
+  <<: *with_nix_2
+  <<: *in_dev_branch
+  stage: build-and-test
+
+deploy_autoscaling_ci:
+  <<: *with_nix_2
+  <<: *in_master_branch
+  stage: deploy
