feat(back): #941.30 cfn s3 no logging
Former-commit-id: d79dd0dd41fbaccf348bee7fd6596d864b178ac1

--- a/test/static/cloudformation/safe/template.yaml
+++ b/test/static/cloudformation/safe/template.yaml
@@ -227,6 +227,8 @@ Resources:
   s3Bucket:
     Properties:
       AccessControl: Private
+      LoggingConfiguration:
+        LogFilePrefix: log
     Type: AWS::S3::Bucket
   secret1:
     Properties:
