feat(front): #2140.77 go live
- no-deltas-check

Closes #2140


Former-commit-id: 70d35a19a6a9cda82982abf4c21235261d18e596

--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,7 @@ django-apps/**/dist
 /geckodriver.log
 /lambda/.venv.*
 /TEMP_FD
+/test
 /test_async/dynamo_data/bb_executions.json.now
 /version.txt
 /.coverage*
