refac(build): #411.5 terraform states bucket
- Remove job as it cannot be properly automatized.
Creation of first bucket must be done manually.


Former-commit-id: f41e15ef0af694b132e4db825abff9b9857cb765

--- a/build2/Dockerfile
+++ b/build2/Dockerfile
@@ -6,7 +6,7 @@ RUN apk add --no-cache \
 
 ARG PROVISIONER
 
-COPY build/ /code/build/
+COPY build2/ /code/build2/
 
 RUN   nix-shell --run ':' "/code/build/provisioners/${PROVISIONER}.nix" \
   &&  nix-store --optimise
