--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -242,136 +242,45 @@ services_repositories_cache:
     refs: [schedules]
     variables: [$SCHEDULE_SERVICES_REPOSITORIES_CACHE]
 
-user_provision_asserts_dev_test:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: build-and-test
-
-user_provision_asserts_dev_deploy:
-  <<: *with_nix
-  <<: *in_master_branch
-  stage: deploy
-
 user_provision_asserts_dev_rotate_keys:
   <<: *with_nix
   <<: *in_schedule_user_provision_rotate_keys
   stage: rotation
 
-user_provision_asserts_prod_test:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: build-and-test
-
-user_provision_asserts_prod_deploy:
-  <<: *with_nix
-  <<: *in_master_branch
-  stage: deploy
-
 user_provision_services_prod_rotate_keys:
   <<: *with_nix
   <<: *in_schedule_user_provision_rotate_keys
   stage: rotation
-
-user_provision_services_dev_test:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: build-and-test
-
-user_provision_services_dev_deploy:
-  <<: *with_nix
-  <<: *in_master_branch
-  stage: deploy
 
 user_provision_services_dev_rotate_keys:
   <<: *with_nix
   <<: *in_schedule_user_provision_rotate_keys
   stage: rotation
 
-user_provision_services_prod_test:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: build-and-test
-
-user_provision_services_prod_deploy:
-  <<: *with_nix
-  <<: *in_master_branch
-  stage: deploy
-
 user_provision_services_prod_rotate_keys:
   <<: *with_nix
   <<: *in_schedule_user_provision_rotate_keys
   stage: rotation
-
-user_provision_integrates_dev_test:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: build-and-test
-
-user_provision_integrates_dev_deploy:
-  <<: *with_nix
-  <<: *in_master_branch
-  stage: deploy
 
 user_provision_integrates_dev_rotate_keys:
   <<: *with_nix
   <<: *in_schedule_user_provision_rotate_keys
   stage: rotation
 
-user_provision_integrates_prod_test:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: build-and-test
-
-user_provision_integrates_prod_deploy:
-  <<: *with_nix
-  <<: *in_master_branch
-  stage: deploy
-
 user_provision_integrates_prod_rotate_keys:
   <<: *with_nix
   <<: *in_schedule_user_provision_rotate_keys
   stage: rotation
-
-user_provision_web_dev_test:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: build-and-test
-
-user_provision_web_dev_deploy:
-  <<: *with_nix
-  <<: *in_master_branch
-  stage: deploy
 
 user_provision_web_dev_rotate_keys:
   <<: *with_nix
   <<: *in_schedule_user_provision_rotate_keys
   stage: rotation
 
-user_provision_web_prod_test:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: build-and-test
-
-user_provision_web_prod_deploy:
-  <<: *with_nix
-  <<: *in_master_branch
-  stage: deploy
-
 user_provision_web_prod_rotate_keys:
   <<: *with_nix
   <<: *in_schedule_user_provision_rotate_keys
   stage: rotation
-
-fluidasserts_post:
-  tags: [autoscaling]
-  stage: postdeploy
-  image: fluidattacks/asserts
-  script:
-    - asserts asserts/exploit.py
-  only:
-    - master
-  except:
-    - schedules
 
 # Build 2
 
@@ -433,6 +342,86 @@ apply_infra_secret_management:
   <<: *in_master_branch
   stage: deploy
 
+test_user_provision_asserts_dev:
+  <<: *with_nix_2
+  <<: *in_dev_branch
+  stage: build-and-test
+
+apply_user_provision_asserts_dev:
+  <<: *with_nix_2
+  <<: *in_master_branch
+  stage: deploy
+
+test_user_provision_asserts_prod:
+  <<: *with_nix_2
+  <<: *in_dev_branch
+  stage: build-and-test
+
+apply_user_provision_asserts_prod:
+  <<: *with_nix_2
+  <<: *in_master_branch
+  stage: deploy
+
+test_user_provision_services_dev:
+  <<: *with_nix_2
+  <<: *in_dev_branch
+  stage: build-and-test
+
+apply_user_provision_services_dev:
+  <<: *with_nix_2
+  <<: *in_master_branch
+  stage: deploy
+
+test_user_provision_services_prod:
+  <<: *with_nix_2
+  <<: *in_dev_branch
+  stage: build-and-test
+
+apply_user_provision_services_prod:
+  <<: *with_nix_2
+  <<: *in_master_branch
+  stage: deploy
+
+test_user_provision_integrates_dev:
+  <<: *with_nix_2
+  <<: *in_dev_branch
+  stage: build-and-test
+
+apply_user_provision_integrates_dev:
+  <<: *with_nix_2
+  <<: *in_master_branch
+  stage: deploy
+
+test_user_provision_integrates_prod:
+  <<: *with_nix_2
+  <<: *in_dev_branch
+  stage: build-and-test
+
+apply_user_provision_integrates_prod:
+  <<: *with_nix_2
+  <<: *in_master_branch
+  stage: deploy
+
+test_user_provision_web_dev:
+  <<: *with_nix_2
+  <<: *in_dev_branch
+  stage: build-and-test
+
+apply_user_provision_web_dev:
+  <<: *with_nix_2
+  <<: *in_master_branch
+  stage: deploy
+
+test_user_provision_web_prod:
+  <<: *with_nix_2
+  <<: *in_dev_branch
+  stage: build-and-test
+
+apply_user_provision_web_prod:
+  <<: *with_nix_2
+  <<: *in_master_branch
+  stage: deploy
+
 test_commit_msg:
   <<: *with_nix_2
   <<: *in_dev_branch
@@ -455,3 +444,14 @@ danger:
     - npm install @commitlint/{config-conventional,cli}
   script:
     - danger --verbose --fail-on-errors=true
+
+fluidasserts_post:
+  tags: [autoscaling]
+  stage: postdeploy
+  image: fluidattacks/asserts
+  script:
+    - asserts asserts/exploit.py
+  only:
+    - master
+  except:
+    - schedules
