--- a/test/static/cloudformation/safe/template.yaml
+++ b/test/static/cloudformation/safe/template.yaml
@@ -227,6 +227,11 @@ Resources:
   s3Bucket:
     Properties:
       AccessControl: Private
+      BucketEncryption:
+        ServerSideEncryptionConfiguration:
+          - ServerSideEncryptionByDefault:
+              KMSMasterKeyID: master_key
+              SSEAlgorithm: aws:kms
       LoggingConfiguration:
         LogFilePrefix: log
     Type: AWS::S3::Bucket
