feat(conf): #2242 set up linter codewoners
- Split the jobs to allow aprovations on linter files by only codeowers


Former-commit-id: 0d09815746a3848c9e3c5455c811e130d0956b2c

--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -7,3 +7,11 @@
 
 # Back approvers
 /django-apps/integrates-back-async/backend/authz/ @jrestrepoatfluid @mnorenaatfluid @acuberosatfluid
+
+# Linter approvers
+/build/include/linter-jobs.sh @mnorenaatfluid @kamadoatfluid
+/app/static/graphics/.eslintrc @mnorenaatfluid @kamadoatfluid
+/front/.eslintignore @mnorenaatfluid @kamadoatfluid
+/front/.eslintrc.json @mnorenaatfluid @kamadoatfluid
+/front/tslint.json @mnorenaatfluid @kamadoatfluid
+/mobile/tslint.json @mnorenaatfluid @kamadoatfluid
