feat(back): #941.32 cfn s3 policy public acc
Former-commit-id: 0faeed527b5192c5910d5f52d6055c76dbba0fe6

--- a/test/static/cloudformation/safe/template.yaml
+++ b/test/static/cloudformation/safe/template.yaml
@@ -235,6 +235,14 @@ Resources:
       LoggingConfiguration:
         LogFilePrefix: log
     Type: AWS::S3::Bucket
+  s3BucketPolicy:
+    Properties:
+      Bucket: s3Bucket
+      PolicyDocument:
+        Statement:
+          - Effect: Allow
+            Principal: account
+    Type: AWS::S3::BucketPolicy
   secret1:
     Properties:
       GenerateSecretString:
