feat(build): #411.11 send_new_release_email
- Add job and provisioner
- Remove old job
- Small fix on caches dockerfile


Former-commit-id: 0d226d67bc700f89fb49a1bfc3c86fd01f77e128

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -213,12 +213,6 @@ run_break_build_dynamic:
   <<: *in_master_branch
   stage: postdeploy
 
-send_new_version_email:
-  <<: *with_nix
-  <<: *in_master_branch
-  when: always
-  stage: postdeploy
-
 services_repositories_cache:
   <<: *with_nix
   tags: [autoscaling-large]
@@ -429,6 +423,11 @@ danger:
     - npm install @commitlint/{config-conventional,cli}
   script:
     - danger --verbose --fail-on-errors=true
+
+send_new_release_email:
+  <<: *with_nix_2
+  <<: *in_master_branch
+  stage: postdeploy
 
 fluidasserts_post:
   tags: [autoscaling]
