feat(build): #411.14 monolith infra
- Add job and provisioner for both test and apply
- Remove old jobs
- Add helm 2 pkgs


Former-commit-id: 0e71d2b1ab5ab1e860e0be9da6b097069ff4a308

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -183,16 +183,6 @@ infra_autoscaling_ci_deploy_config:
   <<: *in_master_branch
   stage: deploy
 
-infra_monolith_test:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: build-and-test
-
-infra_monolith_deploy:
-  <<: *with_nix
-  <<: *in_master_branch
-  stage: deploy
-
 run_break_build_static:
   <<: *with_nix
   <<: *in_dev_branch
@@ -220,6 +210,16 @@ services_repositories_cache:
   script:
     - ./build2.sh "${CI_JOB_NAME% *}"
   interruptible: true
+
+test_infra_monolith:
+  <<: *with_nix_2
+  <<: *in_dev_branch
+  stage: build-and-test
+
+apply_infra_monolith:
+  <<: *with_nix_2
+  <<: *in_master_branch
+  stage: deploy
 
 test_infra_autoscaling_ci:
   <<: *with_nix_2
