--- a/mobile/package.json
+++ b/mobile/package.json
@@ -2,7 +2,7 @@
   "name": "integrates",
   "version": "1.0.0",
   "description": "",
-  "main": "./appEntry.ts",
+  "main": "./src/app.tsx",
   "repository": {
     "type": "git",
     "url": "git+https://gitlab.com/fluidattacks/integrates.git"
@@ -15,7 +15,7 @@
   "homepage": "https://fluidattacks.com/integrates",
   "dependencies": {
     "@apollo/react-hooks": "3.1.5",
-    "@types/react-native": "0.62.17",
+    "@types/react-native": "0.62.18",
     "@types/react-router-native": "5.1.0",
     "apollo-cache-inmemory": "1.6.6",
     "apollo-client": "2.6.10",
@@ -33,12 +33,12 @@
     "expo-localization": "8.2.1",
     "expo-secure-store": "9.0.1",
     "expo-updates": "0.2.11",
-    "graphql": "14.6.0",
-    "graphql-tag": "2.10.3",
-    "i18next": "19.5.4",
+    "graphql": "14.7.0",
+    "graphql-tag": "2.10.4",
+    "i18next": "19.5.6",
     "intl": "1.2.5",
     "lodash": "4.17.19",
-    "react": "16.11.0",
+    "react": "16.13.1",
     "react-i18next": "11.7.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-paper": "3.10.1",
@@ -56,11 +56,11 @@
     "bunyan": "1.8.14",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
-    "expo-cli": "3.22.0",
+    "expo-cli": "3.22.1",
     "fetch-mock": "9.10.3",
     "jest": "26.1.0",
     "jest-expo": "38.0.2",
-    "react-dom": "16.11.0",
+    "react-dom": "16.13.1",
     "ts-jest": "26.1.1",
     "tslint": "6.1.2",
     "tslint-react": "5.0.0",
