--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 stages:
-  - terraform-backend
+  - build
   - build-and-test
   - analytics
   - analytics-upload
@@ -172,12 +172,6 @@ backup_analytics_timedoctor:
     refs: [schedules]
     variables: [$SCHEDULE_BACKUP_ANALYTICS_TIMEDOCTOR]
 
-deploy_docker_image_nix:
-  <<: *with_nix
-  <<: *in_schedule_deploy_nix_docker_images
-  tags: [autoscaling-large]
-  stage: build-and-test
-
 infra_autoscaling_ci_deploy_config:
   <<: *with_nix
   <<: *in_master_branch
@@ -200,6 +194,17 @@ services_repositories_cache:
   script:
     - ./build2.sh "${CI_JOB_NAME% *}"
   interruptible: true
+
+build_nix_caches:
+  <<: *with_nix_2
+  <<: *in_schedule_deploy_nix_docker_images
+  tags: [autoscaling-large]
+  image: nixos/nix:2.3
+  stage: build
+  before_script:
+    - apk add --no-cache bash
+  parallel: 22
+  interruptible: false
 
 test_infra_monolith:
   <<: *with_nix_2
