--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -106,17 +106,37 @@ stages:
   stage: analytics
   tags: [autoscaling]
 
-analytics_dev_all:
+analytics_make_documents_dev:
   <<: *analytics_template
   <<: *in_dev_branch
+  image: "${CI_REGISTRY_IMAGE}/nix:analytics_make_documents_dev"
+  parallel: 3
 
-analytics_prod_all:
+analytics_make_documents_prod:
   <<: *analytics_template
   <<: *in_master_branch
+  image: "${CI_REGISTRY_IMAGE}/nix:analytics_make_documents_prod"
+  interruptible: false
+  parallel: 6
+
+analytics_make_documents_prod_schedule:
+  <<: *analytics_template
+  image: "${CI_REGISTRY_IMAGE}/nix:analytics_make_documents_prod_schedule"
+  interruptible: false
+  only:
+    refs: [schedules]
+    variables: [$analytics]
+  parallel: 6
+
+analytics_make_snapshots_prod:
+  <<: *analytics_template
+  <<: *in_master_branch
+  image: "${CI_REGISTRY_IMAGE}/nix:analytics_make_snapshots_prod"
   interruptible: false
 
-analytics_prod_all_schedule:
+analytics_make_snapshots_prod_schedule:
   <<: *analytics_template
+  image: "${CI_REGISTRY_IMAGE}/nix:analytics_make_snapshots_prod_schedule"
   interruptible: false
   only:
     refs: [schedules]
