feat(back): #941.35 cfn object lock disabled
Former-commit-id: 6387fdad3ed46ba88703a22ac9abdc97a5e275f0

--- a/test/static/cloudformation/safe/template.yaml
+++ b/test/static/cloudformation/safe/template.yaml
@@ -234,6 +234,9 @@ Resources:
               SSEAlgorithm: aws:kms
       LoggingConfiguration:
         LogFilePrefix: log
+      ObjectLockConfiguration:
+        ObjectLockEnabled: Enabled
+      ObjectLockEnabled: 'true'
     Type: AWS::S3::Bucket
   s3BucketPolicy:
     Properties:
